AERO: Moved index.html out of the assets folder and placed new filepaths to reflect this change

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> RecommenDater Date Night Suggestion App</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <h1>Budget Option</h1>
     </label for="budget">Choose Budget:
     </label>
     <select> id= "budget">
-        <option value="Budget friendly">Buget friendly</option>
+        <option value="Budget friendly">Budget friendly</option>
         <option value="Moderate Spending">Moderate Spending</option>
         <option value="Extravagant">Extravagant</option>
     </select>
@@ -44,9 +44,6 @@
         <button onclick="suggestRestaurant()">Get Suggestion</button>
     </div>
     <div id="result"></div>
-    <Script>
-        function suggestRestaurant() {
-        }
-    </Script>
+    <script src="assets/style.css"></script>
 </body>
 </html>
