--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> RecommenDater Date Night Suggestion App</title>
-<<<<<<< Updated upstream
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title> RecommenDater Date Night Suggestion App</title>
     <link rel="stylesheet" href="assets/style.css">
-=======
-    <link rel="stylesheet" href="./style.css">
->>>>>>> Stashed changes
+
 </head>
 
 <body>
@@ -56,11 +52,8 @@
         <button onclick="suggestRestaurant()">Get Suggestion</button>
     </div>
     <div id="result"></div>
-<<<<<<< Updated upstream
     <script src="assets/style.css"></script>
-=======
-    <script src="script.js"></script>
->>>>>>> Stashed changes
+
 </body>
 
 </html>
