--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <button onclick="suggestRestaurant()">Get Suggestion</button>
     </div>
     <div id="result"></div>
-    <script src="assets/style.css"></script>
+    <script src="./assets/script.js"></script>
 
 </body>
 
