added some styling to css and updated buttons

--- a/cover-page.html
+++ b/cover-page.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <style>
+        body {
+            background-image: url("assets\th.jpg");
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> RecommenDater Date Night Suggestion App</title>
@@ -11,13 +16,14 @@
 <body>
     <div class="header">
         <h1>Date Night Suggestion App</h1>
-        <div class="start button">
+        <p>Welcome to your next date night Suggestion App!<br> If you are not sure where to take your date this app will randomly choose an option for you.<br> Click the start button below to begin your search!</p>
+        <div class="start button" >
             <a href="index.html"</a>
                 </button>
-            <p>
-            <button>Start</button>
-            </p>
-    </div>
+                <p>
+                    <button>Start</button>
+                </p>
+        </div>
 </body>
 
 </html>
