updated cover page

--- a/cover-page.html
+++ b/cover-page.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body {
-            background-image: url("assets\champagnecover.webp");
+            background-image: url("assets\th.jpg");
         }
     </style>
     <meta charset="UTF-8">
