--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="checkbox" id="price3" value="price=3">
             <label for="price4">$$$$</label>
             <input type="checkbox" id="price4" value="price=4">
-        <input type="submit" class="submit-button">
+       
 
 
         <div>
@@ -46,6 +46,26 @@
             <label for="Italian">Italian</label><br>
             <input type="checkbox" id="Mediterranean" name="Mediterranean" value="Mediterranean">
             <label for="Mediterranean">Mediterranean</label><br>
+            <input type="submit" class="submit-button">
+
+            <div class="card results hidden"> <!-- Card Template from Bulma; modified for current use; define class hidden with display: none in CSS -->
+                <div class="card-image">
+                  <figure class="image is-4by3">
+                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                  </figure>
+                </div>
+                <div class="card-content">
+                  <div class="media">
+                    <div class="media-left">
+                      <figure class="image is-48x48">
+                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                      </figure>
+                    </div>
+                    <div class="media-content">
+                      <p class="title is-4">John Smith</p>
+                      <p class="subtitle is-6">@johnsmith</p>
+                    </div>
+                  </div>
 
 
         </div>
