--- a/cover-page.html
+++ b/cover-page.html
@@ -18,12 +18,12 @@
         <h1>Date Night Suggestion App</h1>
         <p>Welcome to your next date night Suggestion App!<br> If you are not sure where to take your date this app will randomly choose an option for you.<br> Click the start button below to begin your search!</p>
         <div class="start button" >
-            <a href="index.html"></a>
-                </button>
+   
                 <p>
-                    <button>Start</button>
+                    <button><a href="./index.html">Start</a></button>
                 </p>
         </div>
+
 </body>
 
 </html>
