--- a/form-test.html
+++ b/form-test.html
@@ -81,7 +81,7 @@
         </div>
       </div>
    
-    <script src="./assets/script.js" type="module"></script>
+  <script src="./assets/js/form.js"></script>
 
 </body>
 
