--- a/index.html
+++ b/index.html
@@ -14,71 +14,72 @@
         <h1>Date Night Suggestion App</h1>
 
 
-    </div> 
+    </div>
     <br>
     <div class="box">
-      <form>
-        <h2>Location</h2>
+        <form>
+            <h2>Location</h2>
             <label for="location">Please enter a city name, state</label>
-            <input type="text" id ="location"> 
+            <input type="text" id="location">
     </div>
-      <div class="box">
-       <h2>Price</h2>
-            <label for="price1">$</label>
-            <input type="checkbox" id="price1" value="price=1">
-            <label for="price2">$$</label>
-            <input type="checkbox" id="price2" value="price=2">
-            <label for="price3">$$$</label>
-            <input type="checkbox" id="price3" value="price=3">
-            <label for="price4">$$$$</label>
-            <input type="checkbox" id="price4" value="price=4">
-      </div> 
+    <div class="box">
+        <h2>Price</h2>
+        <label for="price1">$</label>
+        <input type="checkbox" id="price1" value="price=1">
+        <label for="price2">$$</label>
+        <input type="checkbox" id="price2" value="price=2">
+        <label for="price3">$$$</label>
+        <input type="checkbox" id="price3" value="price=3">
+        <label for="price4">$$$$</label>
+        <input type="checkbox" id="price4" value="price=4">
+    </div>
 
 
-        <div class="box">
-            <h1>Restaurant Suggestion</h1>
-            </label for="Choose craving">Choose Craving:</label><br>
+    <div class="box">
+        <h1>Restaurant Suggestion</h1>
+        </label for="Choose craving">Choose Craving:</label><br>
 
-            <input type="checkbox" id="American" name="American" value="American">
-            <label for="American">American</label><br>
-            <input type="checkbox" id="Chinese" name="Chinese" value="Chinese">
-            <label for="Chinese">Chinese</label><br>
-            <input type="checkbox" id="Mexican" name="Mexican" value="Mexican">
-            <label for="Mexican">Mexican</label><br>
-            <input type="checkbox" id="Italian" name="Italian" value="Italian">
-            <label for="Italian">Italian</label><br>
-            <input type="checkbox" id="Mediterranean" name="Mediterranean" value="Mediterranean">
-            <label for="Mediterranean">Mediterranean</label><br>
-            <input type="submit" class="submit-button">
+        <input type="checkbox" id="American" name="American" value="American">
+        <label for="American">American</label><br>
+        <input type="checkbox" id="Chinese" name="Chinese" value="Chinese">
+        <label for="Chinese">Chinese</label><br>
+        <input type="checkbox" id="Mexican" name="Mexican" value="Mexican">
+        <label for="Mexican">Mexican</label><br>
+        <input type="checkbox" id="Italian" name="Italian" value="Italian">
+        <label for="Italian">Italian</label><br>
+        <input type="checkbox" id="Mediterranean" name="Mediterranean" value="Mediterranean">
+        <label for="Mediterranean">Mediterranean</label><br>
+        <input type="submit" class="submit-button">
+    </div>
+
+    <div class="card results hidden">
+        <!-- Card Template from Bulma; modified for current use; define class hidden with display: none in CSS -->
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            </figure>
         </div>
-
-            <div class="card results hidden"> <!-- Card Template from Bulma; modified for current use; define class hidden with display: none in CSS -->
-                <div class="card-image">
-                  <figure class="image is-4by3">
-                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                  </figure>
-                </div>
-                <div class="card-content">
-                  <div class="media">
-                    <div class="media-left">
-                      <figure class="image is-48x48">
+        <div class="card-content">
+            <div class="media">
+                <div class="media-left">
+                    <figure class="image is-48x48">
                         <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                      </figure>
-                    </div>
-                    <div class="media-content">
-                      <p class="title is-4">John Smith</p>
-                      <p class="subtitle is-6">@johnsmith</p>
-                    </div>
-                  </div>
+                    </figure>
+                </div>
+                <div class="media-content">
+                    <p class="title is-4">John Smith</p>
+                    <p class="subtitle is-6">@johnsmith</p>
+                </div>
+            </div>
 
 
         </div>
         </form>
-    <div id="result"></div>
+        <div id="result"></div>
 
-    <script src="./assets/script.js"></script>
-    </form>
+        </form>
 
+        <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
