--- a/cover-page.html
+++ b/cover-page.html
@@ -23,7 +23,12 @@
                     <button><a href="./index.html">Start</a></button>
                 </p>
         </div>
-
+        <div id="map"></div>
+        <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArySEMBpe3vPEMZcUfmiH7NMT_B9eaBao&callback=initMap"></script>
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
+        <script src="./assets/script.js"></script>
 </body>
 
 </html>
