--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
         </div>
 
         </form>
+        <div id="map"></div>
+        
+        <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArySEMBpe3vPEMZcUfmiH7NMT_B9eaBao&callback=initMap"></script>
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
+
         <script src="./assets/js/form.js"> </script>
         <script src="./assets/js/script.js"></script>
 </body>
