--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             crossorigin="anonymous"></script>
 
         <script src="./assets/js/form.js"> </script>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/script.js"></script>
 </body>
 
 </html>
