AERO: Worked on a filterResults() function to incorporate a user's input. Also, made minor modifications to the HTML changing food categories from a checkbox to a radio button. Current testing has not populated with filtered responses. Continued testing required as well as a new API key

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <h1>Restaurant Suggestion</h1>
         </label for="Choose craving">Choose Craving:</label><br>
 
-        <input type="checkbox" id="American" name="American" value="American">
+        <input type="radio" id="American" name="restaurant" value="American">
         <label for="American">American</label><br>
-        <input type="checkbox" id="Chinese" name="Chinese" value="Chinese">
+        <input type="radio" id="Chinese" name="restaurant" value="Chinese">
         <label for="Chinese">Chinese</label><br>
-        <input type="checkbox" id="Mexican" name="Mexican" value="Mexican">
+        <input type="radio" id="Mexican" name="restaurant" value="Mexican">
         <label for="Mexican">Mexican</label><br>
-        <input type="checkbox" id="Italian" name="Italian" value="Italian">
+        <input type="radio" id="Italian" name="restaurant" value="Italian">
         <label for="Italian">Italian</label><br>
-        <input type="checkbox" id="Mediterranean" name="Mediterranean" value="Mediterranean">
+        <input type="radio" id="Mediterranean" name="restaurant" value="Mediterranean">
         <label for="Mediterranean">Mediterranean</label><br>
         <input type="submit" class="submit-button">
     </div>
