--- a/cover-page.html
+++ b/cover-page.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <div class="header">
+    
+    <header>
         <h1>Date Night Suggestion App</h1>
         <p>Welcome to your next date night Suggestion App!<br> If you are not sure where to take your date this app will randomly choose an option for you.<br> Click the start button below to begin your search!</p>
         <div class="start button" >
@@ -24,6 +25,7 @@
                 </p>
         </div>
 
+    </header>
         <script src="./assets/script.js"></script>
 </body>
 
