fixed containers, titlesand some colors in css and added div for map in index.html

--- a/cover-page.html
+++ b/cover-page.html
@@ -21,7 +21,7 @@
         <div class="start button" >
    
                 <p>
-                    <button><a href="./index.html">Start</a></button>
+                    <button><a style="color: rgb(255, 255, 255);" href="./index.html">Start</a></button>
                 </p>
         </div>
 
