Resolved issue with the filterResults() function and the renderResults() function.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
         <label for="Italian">Italian</label><br>
         <input type="radio" id="Mediterranean" name="restaurant" value="Mediterranean">
         <label for="Mediterranean">Mediterranean</label><br>
+        <input type="radio" id="no-preference" name="restaurant" value="">
+        <label for="no-preference">No preference</label><br>
         <input type="submit" class="submit-button">
     </div>
 
 
 
 
-  <div class="tailwind-results"> <!-- Template utilized from TailWind Components -->
+  <div class="tailwind-results" style="display: none"> <!-- Template utilized from TailWind Components -->
     <div class="relative flex w-96 flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md">
       <!-- <div
         class="relative mx-4 -mt-6 h-56 overflow-hidden rounded-xl bg-blue-gray-500 bg-clip-border text-white shadow-lg shadow-blue-gray-500/40"> -->
