adding the map-container to render map onto page.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
     </div> -->
   </div>
 
-  <div id="map"></div>
+  <div class="map-container">
+    <div id="map" style="position: relative; overflow: hidden;"></div>
+</div>
 
   <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArySEMBpe3vPEMZcUfmiH7NMT_B9eaBao&callback=initMap"></script>
