updating the map div to have map show on web application.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
 
   <div class="map-container">
-    <div id="map" style="position: relative; overflow: hidden;"></div>
+    <div id="map"></div>
 </div>
 
   <script async
