--- a/cover-page.html
+++ b/cover-page.html
@@ -26,7 +26,7 @@
         </div>
 
     </header>
-        <script src="./assets/script.js"></script>
+        <script src="./assets/js/form.js"></script>
 </body>
 
 </html>
