updated the script.js to include if statement that hides and displays map when map in initialized with view map click.

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
     </div> -->
   </div>
 
-  <div class="map-container">
+  <div class="map-container" style="display: none;">
     <div id="map" style="position: relative; overflow: hidden;"></div>
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArySEMBpe3vPEMZcUfmiH7NMT_B9eaBao&amp;callback=initMap&amp;libraries=places&amp;v=weekly" defer=""></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArySEMBpe3vPEMZcUfmiH7NMT_B9eaBao&amp;callback=initMap&amp;libraries=places&amp;v=weekly" defer=""></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
