AERO: Defined viewPreviousRecommendations(), accessed local storage, created a previous-results-container in index.html, added a homepage event listener

--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
 
 <body>
   <header>
-    <h1>Date Night in Chicago Suggestion App</h1>
+    <h1 class="homepage-link">Date Night in Chicago Suggestion App</h1>
   </header>
 <br>
+
+  <div class="previous-results-container">
+    <h2 class="previous-recommendations-link">View Previous Recommendations</h2>
+    <h3 class="previous-recommendations-heading" style="display: none;">Previous Recommendations</h3> 
+      <ul class="previous-recommendations-list">
+
+      </ul>
+
+  </div>
 
   <div class="box mb-6">
     <h2><b id="title">Restaurant Suggestion</b></h2>
