AERO: Linked a Google Font for the h1 header, changed h1 text to RecommenDater, changed body page background color, changed h1 text color

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <title> RecommenDater Date Night in Chicago Suggestion App</title>
   <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css" />
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
   <header>
-    <h1 class="homepage-link">Date Night in Chicago Suggestion App</h1>
+    <h1 class="homepage-link">RecommenDater</h1>
   </header>
 <br>
 
