--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="box mb-6">
     <h2><b id="title">Restaurant Suggestion</b></h2>
-    </label for="Choose craving" id="sub-title">Choose Craving:</label><br>
+    </label for="Choose craving" id="sub-title">Choose a Craving:</label><br>
 
         <input type="radio" id="American" name="restaurant" value="American">
         <label for="American">American</label><br>
@@ -49,7 +49,7 @@
 
 
 
-
+<div class="results-map-container" style="display: none;">
   <div class="tailwind-results" style="display: none"> <!-- Template utilized from TailWind Components -->
     <div class="relative flex w-96 flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md">
       <!-- <div
@@ -93,6 +93,7 @@
 
   <div class="map-container" style="display: none;">
     <div id="map" style="position: relative; overflow: hidden;"></div>
+  </div>
 </div>
 
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArySEMBpe3vPEMZcUfmiH7NMT_B9eaBao&amp;callback=initMap&amp;libraries=places&amp;v=weekly" defer=""></script>
