--- a/cover-page.html
+++ b/cover-page.html
@@ -16,12 +16,12 @@
 <body>
     
     <header>
-        <h1>Date Night Suggestion App</h1>
+        <div class="header"><h1>Date Night Suggestion App</h1></div>
         <p>Welcome to your next date night Suggestion App!<br> If you are not sure where to take your date this app will randomly choose an option for you.<br> Click the start button below to begin your search!</p>
-        <div class="start button" >
+        <div  >
    
                 <p>
-                    <button><a style="color: rgb(255, 255, 255);" href="./index.html">Start</a></button>
+                    <button class="start-button"><a style="color: rgb(255, 255, 255);" href="./index.html">Start</a></button>
                 </p>
         </div>
 
