--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css" />
   <link rel="stylesheet" href="./assets/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 
@@ -20,7 +21,7 @@
 <br>
 
   <div class="previous-results-container">
-    <h2 class="previous-recommendations-link">View Previous Recommendations</h2>
+    <h2 class="previous-recommendations-link m-8">View Previous Recommendations</h2>
     <h3 class="previous-recommendations-heading" style="display: none;">Previous Recommendations</h3> 
       <ul class="previous-recommendations-list">
 
@@ -30,7 +31,7 @@
 
   <div class="box mb-6">
     <h2><b id="title">Restaurant Suggestion</b></h2>
-    </label for="Choose craving" id="sub-title">Choose a Craving:</label><br>
+    <h3>Choose a Craving:</h3><br>
 
         <input type="radio" id="American" name="restaurant" value="American">
         <label for="American">American</label><br>
@@ -45,11 +46,11 @@
         <input type="radio" id="no-preference" name="restaurant" value="">
         <label for="no-preference">No preference</label><br>
         <input type="submit" class="submit-button">
-    </div>
+  </div>
 
 
 
-<div class="results-map-container" style="display: none;">
+<div class="results-map-container grid grid-cols-2" style="display: none;">
   <div class="tailwind-results" style="display: none"> <!-- Template utilized from TailWind Components -->
     <div class="relative flex w-96 flex-col rounded-xl bg-white bg-clip-border text-gray-700 shadow-md">
       <!-- <div
